@@ -4513,6 +4513,10 @@ class Universe(object):
         Generally built on demand by an Atom querying its fragment property.
 
         .. versionadded:: 0.9.0
+
+        .. versionchanged:: 0.16.0
+           Fragments are sorted by their forst atom index so their order is
+           predictable.
         """
         # Check that bond information is present, else inform
         bonds = self.bonds
@@ -4565,7 +4569,12 @@ class Universe(object):
         f.update(dict((a, _fragset((a,))) for a, val in f.items() if not val))
 
         # All the unique values in f are the fragments
-        frags = tuple([AtomGroup(list(a.ats)) for a in set(f.values())])
+        frags = tuple(
+            sorted(
+                [AtomGroup(list(a.ats)) for a in set(f.values())],
+                key=lambda x: x[0].index
+            )
+        )
 
         return frags
 
